# aiida-archive-inspect

./: .gitignore  LICENSE  README.md  __init__.py  archive_inspect.ipynb  delete.ipynb  detail.ipynb  import_archive.ipynb  load_overview.ipynb  overview.ipynb  setup.cfg  start.py  stored_archives.ipynb  stored_archives.json
aiida_archive_inspect/: import_archive.py  utils.py
