[aiidalab]
title = AiiDA Archive Inspect

[metadata]
name = aiida-archive-inspect
version = 0.0.1
author = Xing Wang
author_email = xingwang1991@gmail.com
description = A app to inspect an AiiDA archive file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/superstar54/aiidalab-archive-inspect
project_urls =
    Logo = https://raw.githubusercontent.com/superstar54/aiidalab-archive-inspect/main/img/logo.png
    Documentation = https://github.com/superstar54/aiidalab-archive-inspect/#readme
    Bug Tracker = https://github.com/superstar54/aiidalab-archive-inspect/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab>=21.09.0

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
